--- a/app/views/games/AllGames.scala.html
+++ b/app/views/games/AllGames.scala.html
@@ -55,7 +55,7 @@
       <tbody data-link="row" class="rowlink">
         @for(game <- currentPage.getList()) {
         <tr>
-          <td><a id="noColor" href="@routes.Games.getGame(game.getName())">@game.getDate()</a></td>
+          <td><a id="noColor" href="@routes.Games.getGame(game.getName())">@game.getDate().substring(1, game.getDate().length())</a></td>
           <td>@*game.getTime()*@</td>
           <td>@game.getLocation()</td>
           <td>@game.getType()</td>
