--- a/app/views/courts/CourtList.scala.html
+++ b/app/views/courts/CourtList.scala.html
@@ -3,7 +3,103 @@
 @scripts = {
     <link rel="stylesheet" href="@routes.Assets.at("stylesheets/courts.css")">
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=true&libraries=places"></script>
-    <script src="@routes.Assets.at("javascripts/courts-map.js")" type="text/javascript"></script>
+    @* <script src="@routes.Assets.at("javascripts/courts-map.js")" type="text/javascript"></script> *@
+
+    <script type="text/javascript">
+
+        //currently set to Univeristy of Hawaii at Manoa as deafult
+        var uh = new google.maps.LatLng(21.2970, -157.8170);
+        var hawaii = new google.maps.LatLng(21.4814, -157.9464)
+
+        function initialize() {
+
+            var mapOptions = {
+                //center: new google.maps.LatLng(21.2970, -157.8170),
+                center: hawaii,
+                zoom: 10
+            };
+
+            var map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
+
+            setMarkers(map, courts);
+
+            // Try HTML5 geolocation
+            if(navigator.geolocation) {
+                navigator.geolocation.getCurrentPosition(function(position) {
+                    var pos = new google.maps.LatLng(position.coords.latitude,
+                    position.coords.longitude);
+
+                    /*var infowindow = new google.maps.InfoWindow({
+                        map: map,
+                        position: pos,
+                        content: 'Location found using HTML5.'
+                    });*/
+
+                    map.setCenter(pos);
+                    map.setZoom(13)
+                }, function() {
+                    handleNoGeolocation(true);
+                });
+            } else {
+                // Browser doesn't support Geolocation
+                handleNoGeolocation(false);
+            }
+
+
+        }
+
+        var courts = [
+            @for(court <- courts) {
+                ['@court.getName', @court.getLat, @court.getLng, '@court.getDescription', @court.getId],
+            }
+        ]
+
+        var infowindow =  new google.maps.InfoWindow();
+
+        function setMarkers(map, locations) {
+            for (var i = 0; i < locations.length; i++) {
+                var court = courts[i];
+                var myLatLng = new google.maps.LatLng (court[1], court[2]);
+                var marker = new google.maps.Marker ({
+                    position : myLatLng,
+                    map : map,
+                    title : court[0]
+                });
+                var description = "<b>" + court[0] + "</b></br>" + court[3] + "</br><a href='" + "#" + "'>more info</a>";
+
+                bindInfoWindow(marker, map, infowindow, description);
+            }
+        }
+
+        function bindInfoWindow(marker, map, infowindow, strDescription) {
+            google.maps.event.addListener(marker, 'click', function() {
+                //infowindow.close();
+                infowindow.setContent(strDescription);
+                infowindow.open(map, marker);
+            });
+        }
+
+        function handleNoGeolocation(errorFlag) {
+            /*if (errorFlag) {
+                var content = 'Error: The Geolocation service failed.';
+            } else {
+                var content = 'Error: Your browser doesn\'t support geolocation.';
+            }
+
+            var options = {
+                map: map,
+                position: uh,
+                content: content
+            };
+
+            var infowindow = new google.maps.InfoWindow(options);*/
+            map.setCenter(hawaii);
+            map.setZoom(12);
+        }
+
+
+        google.maps.event.addDomListener(window, 'load', initialize);
+    </script>
 }
 
 @Main(title, scripts) {
@@ -53,7 +149,7 @@
 
         <!-- List -->
         <div id="list" class="tab-pane fade">
-            <div id="visible-large" class="hidden-xs">
+            <div class="hidden-xs">
 
                 @for((court, index) <- courts.zipWithIndex){
 
@@ -65,10 +161,10 @@
                             <div class="thumbnail" href="">
                                 <img src="http://www.to-hawaii.com/oahu/beaches/images/kuliououbeach/basketball_court.jpg" alt="...">
                                 <div class="caption">
-                                    <h3>@court.getName()</h3>
-                                    <p>@court.getDescription()</p>
+                                    <h3>@court.getName</h3>
+                                    <p>@court.getDescription</p>
                                     <p>
-                                        <a href="@routes.Courts.getCourt(court.getId())" class="btn btn-primary" role="button">View</a>
+                                        <a href="@routes.Courts.getCourt(court.getId)" class="btn btn-primary" role="button">View</a>
                                         <a href="#" class="btn btn-default" role="button">Like</a>
                                     </p>
                                 </div>
@@ -82,7 +178,7 @@
             </div>
 
             <!-- List (phone)-->
-            <div id="visible-xs" class="visible-xs col-xs-12">
+            <div class="visible-xs col-xs-12">
                 <div class="row">
                     <table class="table table-striped table-hover">
                         <thead>
@@ -95,8 +191,8 @@
                         <tbody data-link="row" class="rowlink">
                             @for(court <- courts) {
                                 <tr>
-                                    <td><a href="@routes.Courts.getCourt(court.getId())">@court.getName()</a></td>
-                                    <td>@court.getType()</td>
+                                    <td><a href="@routes.Courts.getCourt(court.getId)">@court.getName</a></td>
+                                    <td>@court.getType</td>
                                 </tr>
                             }
                         </tbody>
