--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -95,6 +95,17 @@ h101 {
   height: 300px
 }
 
-span:hover{
+#vote {
+  display: inline;
+}
+
+#submitVote{
+  background-color: Transparent;
+  border: 0px;
+}
+
+#submitVote:hover{
   color: #F77E07;
+  font-size: 24px;
+  
 }
