--- a/app/views/games/SingleGame.scala.html
+++ b/app/views/games/SingleGame.scala.html
@@ -4,9 +4,15 @@
 @Main(title + game.getName(), isLoggedIn) {
     
     <div class="visible-xs">
-     <button type="button" class="btn btn-primary btn-lg btn-block">Join</button>
-      <hr>  
-  </div>
+            <button type="button" class="btn btn-primary btn-lg btn-block">
+            @if(game.getType() == "Public"){
+                Join
+            } else {
+                Ask To Join
+            }       
+            </button>
+            <hr>
+        </div>
  
   
    <div class="row">
@@ -28,9 +34,12 @@
         </br>
         </br>
       <!-- Need to check if logged in user is user who created the game -->
+      @if(Secured.getUserInfo(ctx()).getName() == game.getUserCreator()) {
         <a href="@routes.Games.editGame(game.getName())">Edit</a>
+      }
         <ul>
         <h10>Created: </h10>@game.getDateCreated()</br></br>
+        <h10>Created by: </h10>@game.getUserCreator()</br></br>
         @if(game.getDateEdit() != null) {
         <h10>Update Count: </h10>@game.getUpdateCount()</br></br>
         <h10>Last Updated: </h10>@game.getDateEdit()</br></br>
