--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -6,6 +6,11 @@ body {
   }
 }
 
+.btn {
+  border-color: #F77E07;
+  background-color: #F77E07;
+}
+
 #footer {
   margin-bottom: 40px;
 }
@@ -107,5 +112,17 @@ h101 {
 #submitVote:hover{
   color: #F77E07;
   font-size: 24px;
-  
+}
+
+.glyphicon {
+  top: 0px;
+}
+
+.glyphicon-search {
+  position: relative;
+  height: 38px;
+}
+
+.btn-group {
+  margin-left: 3px;
 }
