--- a/app/views/games/AllGames.scala.html
+++ b/app/views/games/AllGames.scala.html
@@ -25,7 +25,7 @@
     </div>
     
     <div class="btn-group">
-      <button type="button" class="btn btn-warning dropdown-toggle" data-toggle="dropdown">
+      <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
         Sort By<span class="caret"></span>
       </button>
       <ul class="dropdown-menu" role="menu">
