--- a/app/views/Index.scala.html
+++ b/app/views/Index.scala.html
@@ -1,4 +1,4 @@
-@(title: String, registrationForm: Form[forms.RegistrationForm], isLoggedIn: Boolean)
+@(title: String, registrationForm: Form[forms.RegistrationForm], games: List[models.games.Game], isLoggedIn: Boolean)
 
 @import bootstrap3._
 
@@ -8,123 +8,212 @@
 
 @Main(title, isLoggedIn, scripts) {
 
-    <!-- First Row -->
-    <div class="row odd">
-        <div class="container">
-            <!-- Header -->
-            <div class="col-sm-7" id="large">
-                <h1>Connecting basketball players, teams, and leagues on Oahu.</h1>
-                <div>
-                    <div><span class="glyphicon glyphicon-lg glyphicon-pencil"></span> <strong>Register for leagues.</strong></div>
-                    <div><span class="glyphicon glyphicon-lg glyphicon-globe"></span> <strong>View open gym hours.</strong></div>
-                    <div><span class="glyphicon glyphicon-lg glyphicon-play"></span> <strong>Start pickup games.</strong></div>
-                    <div><span class="glyphicon glyphicon-lg glyphicon-user"></span> <strong>Socialize with other players and teams.</strong></div>
+    @if(isLoggedIn) {
+
+        <div class="container logged-in">
+            <div class="row">
+                <div class="col-md-3">
+                    <div class="well">
+                        <button type="button" class="btn btn-default btn-sm" href="@routes.Games.createGame()">Create Game</button>
+                        <h4>Upcoming Games</h4>
+                        <table class="table table-striped table-hover">
+                            <thead>
+                            </thead>
+                            <tbody data-link="row" class="rowlink">
+                            @for(game <- games) {
+                                <tr>
+                                    <td><a id="noColor" href="@routes.Games.getGame(game.getName())">@game.getName()</a></td>
+                                </tr>
+                            }
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                <div class="col-md-6 hidden-xs">
+                    <div class="well">
+                        <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+                                <!-- Indicators -->
+                            <ol class="carousel-indicators">
+                                <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                                <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                                <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+                            </ol>
+
+                                <!-- Wrapper for slides -->
+                            <div class="carousel-inner">
+                                <div class="item active">
+                                    <img src="@routes.Assets.at("images/HawaiiHoopsNetworkLogo.jpg")" alt="..."
+                                    height="500" width="450px">
+                                    <div class="carousel-caption"></div>
+                                </div>
+                                <div class="item">
+                                    <img src="http://img.groundspeak.com/waymarking/display/3fec022a-8674-4339-a8e5-ced0e26aec21.JPG"
+                                    alt="..." height="500" width="450px">
+                                    <div class="carousel-caption">For Hawaii Hoopers</div>
+                                </div>
+                                <div class="item">
+                                    <img
+                                    src="http://taylorak.files.wordpress.com/2013/11/succeed.jpg?w=576&h=384"
+                                    alt="..." height="500" width="450px">
+                                    <div class="carousel-caption">Meet our team</div>
+                                </div>
+                            </div>
+
+                                <!-- Controls -->
+                            <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev"> <span
+                            class="glyphicon glyphicon-chevron-left"></span>
+                            </a> <a class="right carousel-control" href="#carousel-example-generic" data-slide="next"> <span
+                        class="glyphicon glyphicon-chevron-right"></span>
+                        </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="well">
+                        <h4>Events</h4>
+                        <ul class="list">
+                            <li><a href="#">Sports Authority Shootout</a></li>
+                            <li><a href="#">UH Manoa Pick up Game</a></li>
+                            <li><a href="#">Nike Tournament</a></li>
+                            <li><a href="#">FedEx vs UPS Shootout</a></li>
+                            <li><a href="#">98.5 Shootout</a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
+        </div>
 
-            <!-- Registration Form -->
-            <div class="col-sm-4 col-sm-offset-1">
+
+
+
+
+    } else {
+
+        <!-- First Row -->
+        <div class="row odd">
+
+            @if(flash.containsKey("registered")) {
+                <div class="alert alert-success" style="text-align:center;">
+                    @flash.get("registered")
+                </div>
+            }
+
+            <div class="container">
+                    <!-- Header -->
+                <div class="col-sm-7" id="large">
+                    <h1>Connecting basketball players, teams, and leagues on Oahu.</h1>
+                    <div>
+                        <div><span class="glyphicon glyphicon-lg glyphicon-pencil"></span> <strong>Register for leagues.</strong></div>
+                        <div><span class="glyphicon glyphicon-lg glyphicon-globe"></span> <strong>View open gym hours.</strong></div>
+                        <div><span class="glyphicon glyphicon-lg glyphicon-play"></span> <strong>Start pickup games.</strong></div>
+                        <div><span class="glyphicon glyphicon-lg glyphicon-user"></span> <strong>Socialize with other players and teams.</strong></div>
+                    </div>
+                </div>
+
+                    <!-- Registration Form -->
+                <div class="col-sm-4 col-sm-offset-1">
                 @registrationform(routes.Users.postRegister(), registrationForm("first"), registrationForm("last"), registrationForm("email"),registrationForm("password"), registrationForm("confirmPassword"))
+                </div>
             </div>
         </div>
-    </div>
 
-    <!-- Second Row -->
-    <div class="row even">
-        <div class="container">
-            <div class="col-sm-12">
-                <h2>For players of all levels.</h2>
-                <p class="lead">
-                    The HIHoops site is designed to make it easy for players to connect
-                    with players of a similar skill level, location, and even gender.
-                    <a href="GamesPublic.html" class="btn btn-primary btn-sm">Find Games</a> near your area.
-                </p>
-                <img class="img-responsive" src="@routes.Assets.at("images/players.png")"/>
+        <!-- Second Row -->
+        <div class="row even">
+            <div class="container">
+                <div class="col-sm-12">
+                    <h2>For players of all levels.</h2>
+                    <p class="lead">
+                        The HIHoops site is designed to make it easy for players to connect
+                        with players of a similar skill level, location, and even gender.
+                        <a href="GamesPublic.html" class="btn btn-primary btn-sm">Find Games</a> near your area.
+                    </p>
+                    <img class="img-responsive" src="@routes.Assets.at("images/players.png")"/>
+                </div>
             </div>
         </div>
-    </div>
 
 
-    <!-- Third Row -->
-    <div class="row odd">
-        <div class="container">
-            <div class="col-sm-12 wood-background">
-                <h1>Find gyms & courts</h1>
-                <p class="lead">
-                    Looking for a court to play at? Our gyms page can locate gyms & courts near you!
-                    <a href="gymPublic.html" class="btn btn-primary btn-sm">Find Gyms</a>
-                </p>
-                <img class="img-responsive" src="@routes.Assets.at("images/GymsMap")"/>
+        <!-- Third Row -->
+        <div class="row odd">
+            <div class="container">
+                <div class="col-sm-12 wood-background">
+                    <h1>Find gyms & courts</h1>
+                    <p class="lead">
+                        Looking for a court to play at? Our gyms page can locate gyms & courts near you!
+                        <a href="@routes.Courts.index()" class="btn btn-primary btn-sm">Find Gyms</a>
+                    </p>
+                    <img class="img-responsive" src="@routes.Assets.at("images/GymsMap")"/>
+                </div>
             </div>
         </div>
-    </div>
 
-    <!-- Fourth Row -->
-    <div class="row even">
-        <div class="container">
-            <div class="col-sm-12">
-                <h1>Build your rep.</h1>
-                <p class="lead">
-                    Find other b-ballers to play with and check their sportsmanship rating!
-                    <a href="playerProfiles.html" class="btn btn-primary btn-sm">Search Players</a>
-                </p>
-                <img class="img-responsive" src="@routes.Assets.at("images/PlayerProfiles.png")"/>
+        <!-- Fourth Row -->
+        <div class="row even">
+            <div class="container">
+                <div class="col-sm-12">
+                    <h1>Build your rep.</h1>
+                    <p class="lead">
+                        Find other b-ballers to play with and check their sportsmanship rating!
+                        <a href="playerProfiles.html" class="btn btn-primary btn-sm">Search Players</a>
+                    </p>
+                    <img class="img-responsive" src="@routes.Assets.at("images/PlayerProfiles.png")"/>
+                </div>
             </div>
         </div>
-    </div>
 
 
-    <!-- Fifth Row -->
-    <div class="row odd">
-        <div class="container">
-            <div class="col-sm-12">
-                <h1>Find teams to play in.</h1>
-                <p class="lead">
-                    Search for teams to join based on skill level and position!
-                    <a href="TeamsPublic.html" class="btn btn-primary btn-sm">Search Teams</a>
-                </p>
-                <img class="img-responsive" src="@routes.Assets.at("images/Teams.png")"/>
+        <!-- Fifth Row -->
+        <div class="row odd">
+            <div class="container">
+                <div class="col-sm-12">
+                    <h1>Find teams to play in.</h1>
+                    <p class="lead">
+                        Search for teams to join based on skill level and position!
+                        <a href="TeamsPublic.html" class="btn btn-primary btn-sm">Search Teams</a>
+                    </p>
+                    <img class="img-responsive" src="@routes.Assets.at("images/Teams.png")"/>
+                </div>
             </div>
         </div>
-    </div>
 
 
-    <!-- Sixth Row -->
-    <div class="row even">
-        <div class="container">
-            <div class="col-sm-12">
-                <h1>Find, create, and manage leagues</h1>
-                <p class="lead">
-                    Advertise, create, and manage your league! Or search for leagues that your team can play in!
-                    <a href="LeaguesListPublic.html" class="btn btn-primary btn-sm">Search Leagues</a>
-                </p>
-                <img class="img-responsive" src="@routes.Assets.at("images/Leagues.png")"/>
+        <!-- Sixth Row -->
+        <div class="row even">
+            <div class="container">
+                <div class="col-sm-12">
+                    <h1>Find, create, and manage leagues</h1>
+                    <p class="lead">
+                        Advertise, create, and manage your league! Or search for leagues that your team can play in!
+                        <a href="LeaguesListPublic.html" class="btn btn-primary btn-sm">Search Leagues</a>
+                    </p>
+                    <img class="img-responsive" src="@routes.Assets.at("images/Leagues.png")"/>
+                </div>
             </div>
         </div>
-    </div>
 
-    <!-- Seventh Row -->
-    <div class="row odd">
-        <div class="container">
-            <!-- UH logo -->
-            <div class="col-md-4">
-                <img src="@routes.Assets.at("images/Glidecontent_UH12.png")" width="245" height="224" alt="245x230" vspace="22px">
-            </div>
+        <!-- Seventh Row -->
+        <div class="row odd">
+            <div class="container">
+                    <!-- UH logo -->
+                <div class="col-md-4">
+                    <img src="@routes.Assets.at("images/Glidecontent_UH12.png")" width="245" height="224" alt="245x230" vspace="22px">
+                </div>
 
-            <div class="col-sm-8">
-                <h1>Created by students at the University of Hawaii for local players.</h1>
-                <p class="lead">
-                    Hawaii Hoops Network isn't one of those mainland websites that tries to cater to
-                    basketball players on the islands. Hawaii Hoops Network was created by a group of local students who have a passion
-                    for amateur basketball.
-                </p>
-                <a href="#" class="btn btn-primary btn">Learn More About Us</a>
+                <div class="col-sm-8">
+                    <h1>Created by students at the University of Hawaii for local players.</h1>
+                    <p class="lead">
+                        Hawaii Hoops Network isn't one of those mainland websites that tries to cater to
+                        basketball players on the islands. Hawaii Hoops Network was created by a group of local students who have a passion
+                        for amateur basketball.
+                    </p>
+                    <a href="#" class="btn btn-primary btn">Learn More About Us</a>
+                </div>
             </div>
         </div>
-    </div>
 
-    <br/>
+        <br/>
 
-    <!-- Register Button -->
-    <div align="center"><a class="btn btn-primary btn-xlg" href="#">Ready to register?</a></div>
+        <!-- Register Button -->
+        <div align="center"><a class="btn btn-primary btn-xlg" href="#">Ready to register?</a></div>
+    }
 }
