--- a/app/views/leagues/Leagues.scala.html
+++ b/app/views/leagues/Leagues.scala.html
@@ -1,4 +1,4 @@
-@(title: String, teamsInLeague: List[Team])
+@(title: String, teamsInLeague: List[models.teams.Team])
 
 @Main(title) {
 
@@ -8,7 +8,34 @@
       
       <div class="col-md-8">
         <div class="well">
-        
+          <h1>Schedule</h1>
+          <table>
+            <tr><td><h3>Thursday, April 10, 2014</h3></td></tr>
+            <tr><td><div class ="img-one" style = "background-image: url('@teamsInLeague.get(0).getImageUrl()')"></div><a href = "#"><span><p>@teamsInLeague.get(0).getName()</p></span></a></td>
+            <td><p> vs </p></td>
+            <td><div class ="img-one" style = "background-image: url('@teamsInLeague.get(1).getImageUrl()')"></div><a href = "#"><span><p>@teamsInLeague.get(1).getName()</p></span></a></td></tr>
+            
+            <tr><td><div class ="img-one" style = "background-image: url('@teamsInLeague.get(2).getImageUrl()')"></div><a href = "#"><span><p>@teamsInLeague.get(2).getName()</p></span></a></td>
+            <td><p> vs </p></td>
+            <td><div class ="img-one" style = "background-image: url('@teamsInLeague.get(3).getImageUrl()')"></div><a href = "#"><span><p>@teamsInLeague.get(3).getName()</p></span></a></td></tr>
+            
+            <tr><td><div class ="img-one" style = "background-image: url('@teamsInLeague.get(4).getImageUrl()')"></div><a href = "#"><span><p>@teamsInLeague.get(4).getName()</p></span></a></td>
+            <td><p> vs </p></td>
+            <td><div class ="img-one" style = "background-image: url('@teamsInLeague.get(5).getImageUrl()')"></div><a href = "#"><span><p>@teamsInLeague.get(5).getName()</p></span></a></td></tr>
+            
+            <tr><td><h3>Friday, April 10, 2014</h3></td></tr>
+            <tr><td><div class ="img-one" style = "background-image: url('@teamsInLeague.get(0).getImageUrl()')"></div><a href = "#"><span><p>@teamsInLeague.get(0).getName()</p></span></a></td>
+            <td><p> vs </p></td>
+            <td><div class ="img-one" style = "background-image: url('@teamsInLeague.get(5).getImageUrl()')"></div><a href = "#"><span><p>@teamsInLeague.get(5).getName()</p></span></a></td></tr>
+            
+            <tr><td><div class ="img-one" style = "background-image: url('@teamsInLeague.get(2).getImageUrl()')"></div><a href = "#"><span><p>@teamsInLeague.get(2).getName()</p></span></a></td>
+            <td><p> vs </p></td>
+            <td><div class ="img-one" style = "background-image: url('@teamsInLeague.get(4).getImageUrl()')"></div><a href = "#"><span><p>@teamsInLeague.get(4).getName()</p></span></a></td></tr>
+            
+            <tr><td><div class ="img-one" style = "background-image: url('@teamsInLeague.get(1).getImageUrl()')"></div><a href = "#"><span><p>@teamsInLeague.get(1).getName()</p></span></a></td>
+            <td><p> vs </p></td>
+            <td><div class ="img-one" style = "background-image: url('@teamsInLeague.get(3).getImageUrl()')"></div><a href = "#"><span><p>@teamsInLeague.get(3).getName()</p></span></a></td></tr>
+          </table>
         </div>
       </div>
       
@@ -22,10 +49,12 @@
       
       <div class="col-offset-8 col-md-4">
         <div class="well">
-          <h1>Teams</h1>
+          <h1>Standings</h1>
           <table border="1">
+            <tr><td><h3>Teams</h3></td><td><h3>W</h3></td><td><h3>L</h3></td><td><h3>Points Per Game</h3></td><td><h3>Points Against</h3></td></tr>
             @for(teams <- teamsInLeague){
-              <tr><td><div class ="img-one" style = "background-image: url('@teams.getImageUrl()')"></div><a href = "#"><span>Golden State Warriors</span></a></td></tr>
+              <tr><td><div class ="img-one" style = "background-image: url('@teams.getImageUrl()')"></div><a href = "#"><span>@teams.getName()</span></a></td>
+              <td>3</td><td>0</td><td>50</td><td>40</td></tr>
             }
           </table>
         </div>
@@ -34,13 +63,8 @@
     </div>
     
     <div class="row">
-      <div class="col-md-6">
-        <div class="well">
-          <h1>Standings</h1>
-        </div>
-      </div>
 
-      <div class="col-md-6">
+      <div class="col-md-12">
         <div class="well">
           <h1>League Pictures</h1>
         
