removed Andrew's team model

--- a/app/views/leagues/LeagueList.scala.html
+++ b/app/views/leagues/LeagueList.scala.html
@@ -2,7 +2,7 @@
 
 @Main(title, isLoggedIn) {
 
-  <div class="container">
+@*  <div class="container">
     
     <div class="row">
       
@@ -98,5 +98,5 @@
       </div>
       
     </div>
-  </div>
+  </div> *@
 }
