--- a/app/views/teams/AllTeams.scala.html
+++ b/app/views/teams/AllTeams.scala.html
@@ -4,7 +4,7 @@
 @import bootstrap3._
 
 @Main(title, loggedIn) {
-    
+    <div class="container">
     <div class="row-search hidden-xs">
     <div class="col-md-4">
     
@@ -92,5 +92,5 @@
           </ul>
         </div>
     
-    
+    </div>
 }
