--- a/app/views/teams/ShowTeam.scala.html
+++ b/app/views/teams/ShowTeam.scala.html
@@ -4,7 +4,7 @@
 @import bootstrap3._
 
 @Main(title + team.getTeamName(), loggedIn) {
-    
+    <div class="container">
     <div class="well">
    <h4>@team.getTeamName()</h4>
       <div class="row">
@@ -134,5 +134,5 @@
       </div>
     </div>
     </div>
-    
+    </div>
 }
