--- a/app/views/footer/ContactUs.scala.html
+++ b/app/views/footer/ContactUs.scala.html
@@ -4,7 +4,7 @@
 @import bootstrap3._
 
 @Main(title, isLoggedIn) {
-
+<div class="container">
     <h2>Contact Us</h2>
     </br>
 
@@ -33,4 +33,5 @@
             </div>
         </div>
     }
+    </div>
 }
