--- a/app/assets/stylesheets/index.less
+++ b/app/assets/stylesheets/index.less
@@ -16,8 +16,10 @@
 }
 
 .odd {
+  text-align: center;
   background: url(../images/floor.jpg) repeat-x;
   padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 .even {
@@ -28,4 +30,10 @@
 
 .logged-in {
  padding-top: 20px;
+}
+
+img.centered {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
