--- a/app/views/footer/MessageSent.scala.html
+++ b/app/views/footer/MessageSent.scala.html
@@ -14,6 +14,7 @@
         }
     </style>
 
+<div class="container">
 <div class="content">
             <h3>Message Sent...</h3>
             <p>
@@ -28,7 +29,6 @@
             </p>
         </div>
     </div>
-
     <script src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
     <script type="text/javascript">
         var interval = setInterval(function() {
