--- a/app/views/footer/TermsOfUse.scala.html
+++ b/app/views/footer/TermsOfUse.scala.html
@@ -1,7 +1,7 @@
 @(title: String, isLoggedIn: Boolean)
 
 @Main(title, isLoggedIn) {
-    
+<div class="container">    
    
 <h2>
     Web Site Terms and Conditions of Use
@@ -140,5 +140,6 @@
     
   
     
-    
+</div>    
 }
+
