--- a/app/views/leagues/LeagueList.scala.html
+++ b/app/views/leagues/LeagueList.scala.html
@@ -2,7 +2,7 @@
 
 @Main(title, isLoggedIn) {
 
-@*  <div class="container">
+  <div class="container">
     
     <div class="row">
       
@@ -11,30 +11,11 @@
           <h1>Schedule</h1>
           <table>
             <tr><td><h3>Thursday, April 10, 2014</h3></td></tr>
-            <tr><td><div class ="img-one" style = "background-image: url('@teamsInLeague.get(0).getImageUrl()')"></div><a href = "#"><span><p>@teamsInLeague.get(0).getName()</p></span></a></td>
-            <td><p> vs </p></td>
-            <td><div class ="img-one" style = "background-image: url('@teamsInLeague.get(1).getImageUrl()')"></div><a href = "#"><span><p>@teamsInLeague.get(1).getName()</p></span></a></td></tr>
-            
-            <tr><td><div class ="img-one" style = "background-image: url('@teamsInLeague.get(2).getImageUrl()')"></div><a href = "#"><span><p>@teamsInLeague.get(2).getName()</p></span></a></td>
-            <td><p> vs </p></td>
-            <td><div class ="img-one" style = "background-image: url('@teamsInLeague.get(3).getImageUrl()')"></div><a href = "#"><span><p>@teamsInLeague.get(3).getName()</p></span></a></td></tr>
-            
-            <tr><td><div class ="img-one" style = "background-image: url('@teamsInLeague.get(4).getImageUrl()')"></div><a href = "#"><span><p>@teamsInLeague.get(4).getName()</p></span></a></td>
-            <td><p> vs </p></td>
-            <td><div class ="img-one" style = "background-image: url('@teamsInLeague.get(5).getImageUrl()')"></div><a href = "#"><span><p>@teamsInLeague.get(5).getName()</p></span></a></td></tr>
-            
-            <tr><td><h3>Friday, April 10, 2014</h3></td></tr>
-            <tr><td><div class ="img-one" style = "background-image: url('@teamsInLeague.get(0).getImageUrl()')"></div><a href = "#"><span><p>@teamsInLeague.get(0).getName()</p></span></a></td>
-            <td><p> vs </p></td>
-            <td><div class ="img-one" style = "background-image: url('@teamsInLeague.get(5).getImageUrl()')"></div><a href = "#"><span><p>@teamsInLeague.get(5).getName()</p></span></a></td></tr>
-            
-            <tr><td><div class ="img-one" style = "background-image: url('@teamsInLeague.get(2).getImageUrl()')"></div><a href = "#"><span><p>@teamsInLeague.get(2).getName()</p></span></a></td>
-            <td><p> vs </p></td>
-            <td><div class ="img-one" style = "background-image: url('@teamsInLeague.get(4).getImageUrl()')"></div><a href = "#"><span><p>@teamsInLeague.get(4).getName()</p></span></a></td></tr>
-            
-            <tr><td><div class ="img-one" style = "background-image: url('@teamsInLeague.get(1).getImageUrl()')"></div><a href = "#"><span><p>@teamsInLeague.get(1).getName()</p></span></a></td>
-            <td><p> vs </p></td>
-            <td><div class ="img-one" style = "background-image: url('@teamsInLeague.get(3).getImageUrl()')"></div><a href = "#"><span><p>@teamsInLeague.get(3).getName()</p></span></a></td></tr>
+            @for(teams <- teamsInLeague){
+              <tr><td><div class ="img-one" style = "background-image: url('@teamsInLeague.get(0).getImageUrl()')"></div><a href = "#"><span><p>@teamsInLeague.get(0).getTeamName()</p></span></a></td>
+              <td><p> vs </p></td>
+              <td><div class ="img-one" style = "background-image: url('@teamsInLeague.get(1).getImageUrl()')"></div><a href = "#"><span><p>@teamsInLeague.get(1).getTeamName()</p></span></a></td></tr>
+            }
           </table>
         </div>
       </div>
@@ -53,7 +34,7 @@
           <table border="1">
             <tr><td><h3>Teams</h3></td><td><h3>W</h3></td><td><h3>L</h3></td><td><h3>Points Per Game</h3></td><td><h3>Points Against</h3></td></tr>
             @for(teams <- teamsInLeague){
-              <tr><td><div class ="img-one" style = "background-image: url('@teams.getImageUrl()')"></div><a href = "#"><span>@teams.getName()</span></a></td>
+              <tr><td><div class ="img-one" style = "background-image: url('@teams.getImageUrl()')"></div><a href = "#"><span>@teams.getTeamName()</span></a></td>
               <td>3</td><td>0</td><td>50</td><td>40</td></tr>
             }
           </table>
@@ -98,5 +79,5 @@
       </div>
       
     </div>
-  </div> *@
+  </div>
 }
