--- a/app/views/Main.scala.html
+++ b/app/views/Main.scala.html
@@ -31,7 +31,7 @@
                             <li><a id="courts" href="@routes.Courts.index()">Gyms</a></li>
                             <li><a id="games" href="@routes.Games.allGames(0, "date asc")">Games</a></li>
                             <li><a href="@routes.Leagues.leagues()">Leagues</a></li>                
-                             <li><a id="players" href="@routes.Players.players("name asc", 0)">PlayerList</a></li>
+                             <li><a id="players" href="@routes.Players.players("name asc", 0)">Players</a></li>
                              <li><a href="@routes.Teams.allTeams("teamName asc", 0)">Teams</a></li>
                         }
                         </ul>
