--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -107,11 +107,15 @@ h101 {
 #submitVote{
   background-color: Transparent;
   border: 0px;
+  padding: 0px;
 }
 
 #submitVote:hover{
   color: #F77E07;
-  font-size: 24px;
+}
+
+.glyphicon-star, .glyphicon-star-empty {
+  font-size: 20px;
 }
 
 .glyphicon {
