--- a/app/views/player/PlayerProfile.scala.html
+++ b/app/views/player/PlayerProfile.scala.html
@@ -33,10 +33,10 @@
             }
          } else {
             @for(index <- 1 until (player.getRank(player.getRating(), player.getVotes()) + 1)) {
-               <span id="submitVote"class="glyphicon glyphicon-star"></span>
+               <span class="glyphicon glyphicon-star"></span>
             } 
             @for(index <- 1 until (5 - player.getRank(player.getRating(), player.getVotes()) + 1)) {
-               <span id="submitVote" class="glyphicon glyphicon-star-empty"></span>
+               <span class="glyphicon glyphicon-star-empty"></span>
             }
          }
          </div>
@@ -57,6 +57,7 @@
         
         @if(isLoggedIn){
             @if(user.getId() == player.getId()) {
+                <br>
                 <a href="@routes.Players.playerEdit(player.getId())" class="btn btn-primary" role="button">Edit Profile</a>
             }
         }
@@ -76,47 +77,8 @@
           
           <div id="bio" class="tab-pane fade in active">
             <div class="container ">
-              <div class="tab-pane-carousel">
-              <div class="col-md-12">
-              <br>
-              <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-                <!-- Indicators -->
-                <ol class="carousel-indicators">
-                  <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-                  <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-                  <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-                </ol>
-                
-                <!-- Wrapper for slides -->
-                <div class="carousel-inner">
-                  <div class="item active">
-                    <img src="http://cbsphilly.files.wordpress.com/2012/04/basketballsunset.jpg" alt="..."
-                      height="500" width="450px">
-                    <div class="carousel-caption">Play tough</div>
-                  </div>
-                  <div class="item">
-                    <img src="http://img.groundspeak.com/waymarking/display/3fec022a-8674-4339-a8e5-ced0e26aec21.JPG"
-                      alt="..." height="500" width="450px">
-                    <div class="carousel-caption">Play great</div>
-                  </div>
-                  <div class="item">
-                    <img
-                      src="http://wac.450f.edgecastcdn.net/80450F/wyopreps.com/files/2011/12/Basketball-Net-Whistle.jpg"
-                      alt="..." height="500" width="450px">
-                    <div class="carousel-caption">Play</div>
-                  </div>
-                </div>
-
-                <!-- Controls -->
-                <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev"> <span
-                  class="glyphicon glyphicon-chevron-left"></span>
-                </a> <a class="right carousel-control" href="#carousel-example-generic" data-slide="next"> <span
-                  class="glyphicon glyphicon-chevron-right"></span>
-                </a>
-              </div>
-              </div>
-              </div>
-              <h5><small>About Me: </small>    @player.getBio() </h5>
+              <h5><small>About Me: </small>  @player.getBio() </h5>
+              <h5><small>Teams: </small>   </h5>
             </div> <!-- contatiner (for carousel) -->
             
             
