save..not done yet

--- a/app/views/games/SingleGame.scala.html
+++ b/app/views/games/SingleGame.scala.html
@@ -2,7 +2,7 @@
 
 
 @Main(title + game.getName(), isLoggedIn) {
-    
+    <div class="container">
     <div class="visible-xs">
             <button type="button" class="btn btn-primary btn-lg btn-block">
             @if(game.getType() == "Public"){
@@ -75,6 +75,7 @@
         </ul>
         </div>
     </div>
+   </div>
    </div>
    <!-- TODO do modal dialog -->
 }
