--- a/app/views/teams/ShowTeam.scala.html
+++ b/app/views/teams/ShowTeam.scala.html
@@ -29,7 +29,7 @@
       <div class="col-md-9">
       <div class="tab-content">
             <div class="tab-pane fade in active" id="stats">
-               <img src="img/no-available-image.png" height="40%" width="40%">
+               <img src="@routes.Assets.at("images/no-available-image.png")" height="40%" width="40%"> <br>
                <h4>Standings & Stats: </h4>
                   <i>Record: </i>14-10</br>
                      40% 3pts  <br>
@@ -65,7 +65,8 @@
                 <span class="glyphicon glyphicon-star"></span>
 
                 <br>
-                 <img src="img/no-available-image.png" height="100%" width="100%">
+                    <img src="@routes.Assets.at("images/no-available-image.png")" height="60%" width="60%"> <br>
+        
                  </div>
                  <div class="col-md-8">
                 <h4>Awards & Stats: </h4>
