--- a/app/views/teams/AllTeams.scala.html
+++ b/app/views/teams/AllTeams.scala.html
@@ -3,8 +3,23 @@
 @import helper._
 @import bootstrap3._
 
-@Main(title, loggedIn) {
+@scripts = {
+    <!--  Tablesorter doesn't seem to be working now, will fix later -->
+    <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript" ></script>
+    <script src="@routes.Assets.at("javascripts/jquery.tablesorter.js")" type="text/javascript"></script>
+    
+    <script type="text/javascript">
+    $(document).ready(function() 
+    	    { 
+    	        $("#teamTable").tablesorter(); 
+    	    } 
+    	);
+    </script>  
+}
+
+@Main(title, loggedIn, scripts) {
     <div class="container">
+    <div class="well">
     <div class="row-search hidden-xs">
     <div class="col-md-4">
     
@@ -39,7 +54,7 @@
     <a href="@routes.Teams.createTeam()" class="btn btn-primary btn-md pull-right" role="button">Create a Team</a> </br>
       </div>
  
-    <table class="table table-striped table-hover">
+    <table id="#teamTable" class="table">
       <thead>
          <tr>
             <th>Name</th>
@@ -91,6 +106,6 @@
             }
           </ul>
         </div>
-    
+    </div>
     </div>
 }
