--- a/app/views/games/SingleGame.scala.html
+++ b/app/views/games/SingleGame.scala.html
@@ -1,16 +1,21 @@
 @(title: String, game: models.games.Game, isLoggedIn: Boolean)
 
+@scripts = {
+    <link rel="stylesheet" href="@routes.Assets.at("stylesheets/games.css")">
+}
 
-@Main(title + game.getName(), isLoggedIn) {
+@Main(title + game.getName(), isLoggedIn, scripts) {
     <div class="container">
     <div class="visible-xs">
-            <button type="button" class="btn btn-primary btn-lg btn-block">
             @if(game.getType() == "Public"){
+            <a href="@routes.Games.joinPublic(game.getName())" type="button" class="btn btn-primary btn-lg btn-block">
                 Join
+            </a>
             } else {
+            <a href="@routes.Games.joinPrivate(game.getName())" type="button" class="btn btn-primary btn-lg btn-block">
                 Ask To Join
+            </a>
             }       
-            </button>
             <hr>
         </div>
  
@@ -21,14 +26,21 @@
         <h2>@game.getName()</h2>
         <hr>
         </br>
+        @if(game.getPlayers().contains(Secured.getUserInfo(ctx()).getName())) {
+            You are a part of this game.
+        </br>
+        </br>
+        }
         <ul>
         <!--  Created By: Get user who created the game -->
-        <h10>Type: </h10><i>@game.getType()</i></br></br>
-        <h10>Time: </h10>@game.getTime()</br></br>
-        <h10>Date: </h10>@game.getDate().substring(1, game.getDate().length())</br></br>
-        <h10>Location: </h10>@game.getLocation()</br></br>
+        <h10>Type: </h10><i><h11>@game.getType()</h11></i></br></br>
+        <h10>Time: </h10><h11>@game.getTime()</h11></br></br>
+        <h10>Date: </h10><h11>@game.getDate().substring(1, game.getDate().length())</h11></br></br>
+        @if(game.getType() == "Public" || game.getPlayers().contains(Secured.getUserInfo(ctx()).getName())) {
+         <h10>Location: </h10><h11>@game.getLocation()</h11></br></br>
+        }
         <!-- <h10>Frequency: </h10><i>@game.getType()</i></br></br> -->
-        <h10>Skill Level (avg years playing): </h10>@game.getAvgSklLvl()</br>
+        <h10>Skill Level (avg years playing): </h10><h11>@game.getAvgSklLvl()</h11></br>
         </ul>
         </br>
         </br>
@@ -54,13 +66,22 @@
         <div class="well">
         
         <div class="hidden-xs">
-            <button type="button" class="btn btn-primary btn-lg btn-block">
+        @if(game.getPlayers().contains(Secured.getUserInfo(ctx()).getName())) {
+            <a data-toggle="modal" href="#unjoin" type="button" class="btn btn-primary btn-lg btn-block">
+                Unjoin
+            </a>
+           
+        } else {
             @if(game.getType() == "Public"){
+            <a href="@routes.Games.joinPublic(game.getName())" type="button" class="btn btn-primary btn-lg btn-block">
                 Join
+            </a>
             } else {
+            <a href="@routes.Games.joinPrivate(game.getName())" type="button" class="btn btn-primary btn-lg btn-block">
                 Ask To Join
+            </a>
             }       
-            </button>
+        }
             <hr>
         </div>
         
@@ -78,5 +99,23 @@
    </div>
    </div>
    <!-- TODO do modal dialog -->
+    <div id="unjoin" class="modal fade">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h4 class="modal-title">Are you sure you want to unjoin?</h4>
+      </div>
+      <div class="modal-body">
+        <p>Your name will be removed from the list of players attending.</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+        <a href="@routes.Games.unjoin(game.getName())" type="button" class="btn btn-danger">Unjoin</a>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
 }
 
