fixed null pointer, closes #92

--- a/app/views/games/RequestSent.scala.html
+++ b/app/views/games/RequestSent.scala.html
@@ -18,7 +18,7 @@
 <div class="content">
             <h3>Request Sent...</h3>
             <p>
-                Your request has been sent to join this game has been sent to the creator.
+                Your request to join this game has been sent to the creator.
             </p>
             <p>
                 <i class="glyphicon glyphicon-chevron-right"></i> You will be redirected back to the game page you were originally viewing.<br/>
