Finished Comment and Player listing pages and models. Made changes to player and user models that might break other pages.

--- a/app/views/courts/CourtList.scala.html
+++ b/app/views/courts/CourtList.scala.html
@@ -50,7 +50,7 @@
 
         var courts = [
             @for(court <- courts) {
-                ['@court.getName', @court.getLat, @court.getLng, '@court.getDescription', @court.getId],
+                ['@court.getName', @court.getAddress.getLat, @court.getAddress.getLng, '@court.getDescription', @court.getId],
             }
         ]
 
