--- a/app/views/Main.scala.html
+++ b/app/views/Main.scala.html
@@ -7,6 +7,7 @@
         <title>@title - Hawaii Hoops Network</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootswatch/3.0.0/united/bootstrap.min.css">
+        <script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
 
         <!--  Load site-specific customizations after bootstrap. -->
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/basketball.jpg")">
@@ -28,7 +29,7 @@
                     <div class="collapse navbar-collapse">
                         <ul class="nav navbar-nav">
                         @if(isLoggedIn) {
-                            <li><a id="courts" href="@routes.Courts.index()">Gyms</a></li>
+                            <li><a id="courts" href="@routes.Courts.index()">Courts</a></li>
                             <li><a id="games" href="@routes.Games.allGames(0, "date asc")">Games</a></li>
                             <li><a href="@routes.Leagues.leagues()">Leagues</a></li>                
                              <li><a id="players" href="@routes.Players.players("name asc", 0)">Players</a></li>
@@ -37,7 +38,7 @@
                         </ul>
                         <ul class="nav navbar-nav navbar-right">
                         @if(isLoggedIn) {
-                            <li><p class="navbar-text">@Secured.getUserInfo(ctx()).getName()</p></li>
+                            <li><p class="navbar-text">@Secured.getUserInfo(ctx()).getName</p></li>
                             <li><a data-toggle="modal" href="@routes.Users.logout()">Logout</a></li>
                         } else {
                             <li><a data-toggle="modal" href="@routes.Users.login()">Login</a></li>
@@ -57,7 +58,6 @@
         <a href="@routes.Application.about">About Us</a>
       </div>
         <!-- Load Bootstrap JavaScript components. HTMLUnit (used in testing) requires JQuery 1.8.3 or below). -->
-        <script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
          <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
          <!-- Makes rows in tables clickable. -->
          <script type="text/javascript" src="@routes.Assets.at("javascripts/rowlink.js")"></script>
