--- a/app/views/bootstrap3/textarea.scala.html
+++ b/app/views/bootstrap3/textarea.scala.html
@@ -1,7 +1,7 @@
 @(field: Field, rows: String, label:String, placeholder:String, help:String)
 
   <div class="form-group @if(field.hasErrors) {has-error}">
-    <label class="col-sm-2 control-label">@label</label>
+    <label class="col-sm-2">@label</label>
     <div class="col-sm-10">
       <textarea class="form-control"
                 rows="@rows" 
