--- a/app/views/games/SingleGame.scala.html
+++ b/app/views/games/SingleGame.scala.html
@@ -1,11 +1,11 @@
 @(title: String, game: models.games.Game, isLoggedIn: Boolean)
 
 
-@Main(title + game.getName(), isLoggedIn) {
+@Main(title + game.getName, isLoggedIn) {
     
     <div class="visible-xs">
             <button type="button" class="btn btn-primary btn-lg btn-block">
-            @if(game.getType() == "Public"){
+            @if(game.getType == "Public"){
                 Join
             } else {
                 Ask To Join
@@ -18,31 +18,31 @@
    <div class="row">
     <div class="col-md-9">
         <div class="well">
-        <h2>@game.getName()</h2>
+        <h2>@game.getName</h2>
         <hr>
-        </br>
+        <br/>
         <ul>
         <!--  Created By: Get user who created the game -->
-        <h10>Type: </h10><i>@game.getType()</i></br></br>
-        <h10>Time: </h10>@game.getTime()</br></br>
-        <h10>Date: </h10>@game.getDate().substring(1, game.getDate().length())</br></br>
-        <h10>Location: </h10>@game.getLocation()</br></br>
-        <!-- <h10>Frequency: </h10><i>@game.getType()</i></br></br> -->
-        <h10>Skill Level (avg years playing): </h10>@game.getAvgSklLvl()</br>
-        </ul>
-        </br>
-        </br>
-        </br>
+        <h10>Type: </h10><i>@game.getType</i><br/><br/>
+        <h10>Time: </h10>@game.getTime<br/><br/>
+        <h10>Date: </h10>@game.getDate.substring(1, game.getDate.length)<br/><br/>
+        <h10>Location: </h10>@game.getLocation<br/><br/>
+        @** <h10>Frequency: </h10><i>@game.getType</i></br></br> **@
+        <h10>Skill Level (avg years playing): </h10>@game.getAvgSklLvl<br/>
+        <ul/>
+        <br/>
+        <br/>
+        <br/>
       <!-- Need to check if logged in user is user who created the game -->
-      @if(Secured.getUserInfo(ctx()).getName() == game.getUserCreator()) {
-        <a href="@routes.Games.editGame(game.getName())">Edit</a>
+      @if(Secured.getUserInfo(ctx()).getName == game.getUserCreator) {
+        <a href="@routes.Games.editGame(game.getName)">Edit</a>
       }
         <ul>
-        <h10>Created: </h10>@game.getDateCreated()</br></br>
-        <h10>Created by: </h10>@game.getUserCreator()</br></br>
-        @if(game.getDateEdit() != null) {
-        <h10>Update Count: </h10>@game.getUpdateCount()</br></br>
-        <h10>Last Updated: </h10>@game.getDateEdit()</br></br>
+        <h10>Created: </h10>@game.getDateCreated<br/><br/>
+        <h10>Created by: </h10>@game.getUserCreator<br><br/>
+        @if(game.getDateEdit != null) {
+        <h10>Update Count: </h10>@game.getUpdateCount<br/><br/>
+        <h10>Last Updated: </h10>@game.getDateEdit<br/><br/>
         }
         
         
@@ -55,7 +55,7 @@
         
         <div class="hidden-xs">
             <button type="button" class="btn btn-primary btn-lg btn-block">
-            @if(game.getType() == "Public"){
+            @if(game.getType == "Public"){
                 Join
             } else {
                 Ask To Join
@@ -64,12 +64,12 @@
             <hr>
         </div>
         
-        Players Attending:</br>
+        Players Attending:<br/>
         <ul>
-         @for(player <- game.getPlayerProfiles()) {
-            <li><a href="@routes.Players.playerProfile(player.getId())">@player.getName()</a></li>
+         @for(player <- game.getPlayerProfiles) {
+            <li><a href="@routes.Players.playerProfile(player.getId)">@player.getUser.getName</a></li>
          }
-         @for(player <- game.getNoProfile()) {
+         @for(player <- game.getNoProfile) {
             <li>@player</li>
          }
         </ul>
