--- a/app/views/player/PlayerProfile.scala.html
+++ b/app/views/player/PlayerProfile.scala.html
@@ -18,7 +18,7 @@
             <img src="@player.getPicUrl()" class="img-circle" height="60%" width="60%"> <br>
         }
         </center>
-        <h4>@player.getName()</h4>
+        <h4>@player.getUser.getName()</h4>
         <div class="btn-toolbar" role="toolbar">
         @if(player.getId() != user.getId()){
             @for(index <- 1 until (player.getRank(player.getRating(), player.getVotes()) + 1)) {
