--- a/app/views/Index.scala.html
+++ b/app/views/Index.scala.html
@@ -1,9 +1,44 @@
-@(title: String, registrationForm: Form[forms.RegistrationForm], isLoggedIn: Boolean)
+@(title: String, registrationForm: Form[forms.RegistrationForm], playerForm : Form[views.formdata.PlayerFormData], isLoggedIn: Boolean)
 
 @import bootstrap3._
 
 @scripts = {
     <link rel="stylesheet" href="@routes.Assets.at("stylesheets/index.css")">
+    <script type="text/javascript">
+    $(document).ready(function() {
+    $('#openBtn').click(function(){$('#myModal').modal({show:true})});
+    $('.modal').on('hidden.bs.modal', function( event ) {
+            $(this).removeClass( 'fv-modal-stack' );
+            $('body').data( 'fv_open_modals', $('body').data( 'fv_open_modals' ) - 1 );
+            });
+    $( '.modal' ).on( 'shown.bs.modal', function ( event ) {
+               // keep track of the number of open modals
+               if ( typeof( $('body').data( 'fv_open_modals' ) ) == 'undefined' )
+               {
+                 $('body').data( 'fv_open_modals', 0 );
+               }
+               // if the z-index of this modal has been set, ignore.
+            if ( $(this).hasClass( 'fv-modal-stack' ) )
+                    {
+                    return;
+                    }
+               
+            $(this).addClass( 'fv-modal-stack' );
+
+            $('body').data( 'fv_open_modals', $('body').data( 'fv_open_modals' ) + 1 );
+
+            $(this).css('z-index', 1040 + (10 * $('body').data( 'fv_open_modals' )));
+
+            $( '.modal-backdrop' ).not( '.fv-modal-stack' )
+                    .css( 'z-index', 1039 + (10 * $('body').data( 'fv_open_modals' )));
+
+            $( '.modal-backdrop' ).not( 'fv-modal-stack' )
+                    .addClass( 'fv-modal-stack' ); });
+    
+    $("form").submit(function(){ alert("Submitted"); });
+    
+    });
+    </script>
 }
 
 @Main(title, isLoggedIn, scripts) {
@@ -212,12 +247,25 @@
         
         <div id="registration" class="modal fade">
             <div class="modal-dialog">
-                <div class="modal-content">
+              <div class="modal-content">
                 <div class="modal-body">
                     @registrationform(routes.Users.postRegister(), registrationForm("first"), registrationForm("last"), registrationForm("email"),registrationForm("password"), registrationForm("confirmPassword"))
                     <a href="" data-dismiss="modal">Cancel</a>
                 </div>
+              </div>
+            </div>
+        </div>
+        
+        <div id="profile" class="modal fade">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-body">
+                    @profileRegistrationForm(routes.Users.postRegister(), playerForm("homeCourt"), playerForm("skill"), playerForm("position"))
                 </div>
+                <div class="modal-footer">
+                    <a href="" data-dismiss="modal">Cancel</a>
+                </div>
+              </div>
             </div>
         </div>
     }
