--- a/app/views/bootstrap3/registrationform.scala.html
+++ b/app/views/bootstrap3/registrationform.scala.html
@@ -46,7 +46,7 @@
           <input id="@confirmField.id" name="@confirmField.name" value="@confirmField.value.getOrElse("")" class="form-control" placeholder="Password" type="password">
           <div class="help-block">@{confirmField.error.map { error => error.message }}</div>
         </div>
-        <input id="submitRegister" class="btn btn-lg btn-primary btn-block" type="submit" value="Register">
+        <input data-toggle="modal" href="#profile" id="submitRegister" class="btn btn-lg btn-primary btn-block" type="submit" value="Register">
         <p class="help-block">By clicking "Register", you agree to our <a href="@routes.Application.terms()">terms of service</a></p>
       </fieldset>
     }
