--- a/app/views/leagues/LeagueList.scala.html
+++ b/app/views/leagues/LeagueList.scala.html
@@ -1,20 +1,89 @@
-@(title: String, teamsInLeague: List[models.teams.Team], isLoggedIn: Boolean)
+@(title: String, league: models.leagues.League, leagueForm: Form[views.formdata.leagues.LeagueForm], teamsInLeague: List[models.teams.Team], isLoggedIn: Boolean)
+
+@import helper._
+@import bootstrap3._
 
 @Main(title, isLoggedIn) {
+
+      <div id="leagueStart" class="modal fade" data-backdrop="static">
+          <div class="modal-dialog">
+              <div class="modal-content">
+              <div class="modal-body">
+                <h2>Create a New League</h2>
+                <h3>Add a name and dates</h3>
+                @form(routes.Leagues.addLeague(), 'class -> "form-horizontal") {
+ 
+                  @bootstrap3.text(leagueForm("leagueName"),
+                    label = "League Name",
+                    placeholder = "The name of the league",
+                    help = "")
+                    
+                  @bootstrap3.datepicker(leagueForm("startDate"),
+                    label = "Start Date",
+                    id = "datepicker",
+                    placeholder = "Click for Calendar",
+                    help = "")
+            
+                  @bootstrap3.datepicker(leagueForm("endDate"),
+                    label = "End Date",
+                    id = "datepicker2",
+                    placeholder = "Click for Calendar",
+                    help = "")
+                    
+                  @bootstrap3.radiobuttons(leagueForm("pubOrPrivate"), 
+                    label = "Public or Private League",
+                    buttonNameList = models.leagues.League.typeOfLeague(),
+                    help = "")
+            
+            
+                  <div class="form-group">
+                    <div class="col-sm-offset-2 col-sm-10">
+                      <button id="submitButton" id="leagueStart" type="submit" class="btn btn-primary pull-left">
+                        Next
+                      </button>
+                      <a href="" data-dismiss="modal" class="btn btn-primary pull-right" role="button">Cancel</a>
+                    </div>
+                  </div>    
+                }
+              </div>
+              </div>
+          </div>
+      </div>
+      
+      <script type="text/javascript">
+        $(window).load(function(){
+          $('#leagueStart').modal('show');
+        });
+      </script>
 
   <div class="container">
     
     <div class="row">
       
+      <div class="col-md-12">
+      
+        <div class="well" id="leagueName">
+          <h1>@league.getLeagueName()</h1>
+        </div>
+      
+      </div>
+    
+    </div>
+    
+    <div class="row">
+      
       <div class="col-md-8">
+      
         <div class="well">
-          <h1>Schedule</h1>
+          <h2>Schedule 
+           <a href="@routes.Leagues.editSchedule()" class="btn btn-primary btn-md pull-right" role="button">Edit Schedule</a> </br>
+          </h2>
           <table>
             <tr><td><h3>Thursday, April 10, 2014</h3></td></tr>
             @for(teams <- teamsInLeague){
-              <tr><td><div class ="img-one" style = "background-image: url('@teamsInLeague.get(0).getImageUrl()')"></div><a href = "#"><span><p>@teamsInLeague.get(0).getTeamName()</p></span></a></td>
+              <tr><td><img src="@teams.getImageUrl()" class="img-one" height="40%" width="40%"><a href = "#"><span><p>@teamsInLeague.get(0).getTeamName()</p></span></a></td>
               <td><p> vs </p></td>
-              <td><div class ="img-one" style = "background-image: url('@teamsInLeague.get(1).getImageUrl()')"></div><a href = "#"><span><p>@teamsInLeague.get(1).getTeamName()</p></span></a></td></tr>
+              <td><img src="@teams.getImageUrl()" class="img-one" height="40%" width="40%"><a href = "#"><span><p>@teamsInLeague.get(1).getTeamName()</p></span></a></td></tr>
             }
           </table>
         </div>
@@ -34,7 +103,7 @@
           <table border="1">
             <tr><td><h3>Teams</h3></td><td><h3>W</h3></td><td><h3>L</h3></td><td><h3>Points Per Game</h3></td><td><h3>Points Against</h3></td></tr>
             @for(teams <- teamsInLeague){
-              <tr><td><div class ="img-one" style = "background-image: url('@teams.getImageUrl()')"></div><a href = "#"><span>@teams.getTeamName()</span></a></td>
+              <tr><td><img src="@teams.getImageUrl()" class="img-one" height="40%" width="40%"><a href = "#"><span>@teams.getTeamName()</span></a></td>
               <td>3</td><td>0</td><td>50</td><td>40</td></tr>
             }
           </table>
@@ -60,10 +129,21 @@
             <!-- Wrapper for slides -->
             <div class="carousel-inner">
               <div class="item active">
-                <img src="..\img\Basketball_League_300x.JPG" width=300>
-                <div class="carousel-caption">
-                </div>
-              </div>
+                    <img src="@routes.Assets.at("images/HawaiiHoopsNetworkLogo.jpg")" alt="..."
+                      height="500" width="450px">
+                    <div class="carousel-caption"></div>
+                  </div>
+                  <div class="item">
+                    <img src="http://img.groundspeak.com/waymarking/display/3fec022a-8674-4339-a8e5-ced0e26aec21.JPG"
+                      alt="..." height="500" width="450px">
+                    <div class="carousel-caption">For Hawaii Hoopers</div>
+                  </div>
+                  <div class="item">
+                    <img
+                      src="http://taylorak.files.wordpress.com/2013/11/succeed.jpg?w=576&h=384"
+                      alt="..." height="500" width="450px">
+                    <div class="carousel-caption">Meet our team</div>
+                  </div>
             </div>
         
             <!-- Controls -->
