--- a/app/views/Main.scala.html
+++ b/app/views/Main.scala.html
@@ -42,7 +42,8 @@
                         </ul>
                         <ul class="nav navbar-nav navbar-right">
                         @if(isLoggedIn) {
-                            <li><p class="navbar-text">@Secured.getUserInfo(ctx()).getName</p></li>
+                            <li><a id="userProfile" class="navbar-text" href="@routes.Players.playerProfile(Secured.getUserInfo(ctx()).getId())">
+                            <span class="glyphicon glyphicon-user"></span> @Secured.getUserInfo(ctx()).getName</a></li>
                             <li><a data-toggle="modal" href="@routes.Users.logout()">Logout</a></li>
                         } else {
                             <li><a data-toggle="modal" href="@routes.Users.login()">Login</a></li>
