--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -44,10 +44,12 @@ h101 {
 
 .navbar-inverse .navbar-nav>.open>a, .navbar-inverse .navbar-nav>.open>a:hover, .navbar-inverse .navbar-nav>.open>a:focus {
   background-color: #DD4814;
+  height: 50px;
 }
 
 .navbar-inverse .navbar-nav>li>a:hover, .navbar-inverse .navbar-nav>li>a:focus {
   background-color: #DD4814;
+  height: 50px;
 }
 
 .footer {
@@ -68,6 +70,7 @@ h101 {
 .navbar-inverse {
   background-color: #F77E07;
   border-color: #F77E07;
+  height: 51px;
 }
 
 .well {
@@ -133,4 +136,9 @@ h101 {
 
 #leagueName {
   text-align:center
+}
+
+#userProfile {
+  margin-top: 0px;
+  margin-botton: 0px;
 }
