edit team roster

--- a/app/views/teams/EditTeamStats.scala.html
+++ b/app/views/teams/EditTeamStats.scala.html
@@ -68,6 +68,12 @@
                         placeholder = "80",
                         help = "")
                         
+                    @bootstrap3.textarea(statForm("roster"),
+                        rows = "6",
+                        label = "Add/Remove players",
+                        placeholder = "",
+                        help = "Please separate player names with a comma.")
+                        
                      <div class="form-group">
                         <div class="col-sm-offset-2 col-sm-10">
                         
