--- a/app/views/teams/ShowTeam.scala.html
+++ b/app/views/teams/ShowTeam.scala.html
@@ -12,7 +12,7 @@
       <ul class="nav nav-tabs nav-stacked" data-tabs="tabs">
          <li class="active"><a href="#stats" data-toggle="tab">Stats</a></li>
          <li><a href="#profiles" data-toggle="tab">Roster</a></li>
-         <li><a href="#media" data-toggle="tab">Media</a></li>
+         <li class="disabled"><a href="#media" data-toggle="tab">Media</a></li>
          <li><a href="#reviews" data-toggle="tab">Comments</a></li>
       </ul>
       </div>
@@ -41,7 +41,7 @@
                      <li>@team.getSteals() steals  <br></li>
                      <li>@team.getBlocks() blocks  <br></li>
                 </ul>     
-                <a href="@routes.Teams.editStats(team.getTeamName())" class="btn btn-primary btn-md pull-right" role="button">Edit Stats</a> </br>
+                <a href="@routes.Teams.editStats(team.getTeamName())" class="btn btn-primary btn-md pull-right" role="button">Edit Stats or Roster</a> </br>
     
             </div>
             <div class="tab-pane fade" id="profiles">
@@ -54,6 +54,8 @@
                         <li>@player</li>                    
                     }
                   </ul>
+                 <a href="@routes.Teams.editStats(team.getTeamName())" class="btn btn-primary btn-md pull-right" role="button">Edit Stats or Roster</a> </br>
+    
             </div>
             
  <div id="player" class="modal fade">
